// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GithubWiki should get default files 1`] = `
[
  "Home.md",
  "_Sidebar.md",
  "module-1.Class.ClassA.md",
  "module-1.Class.ClassB.md",
  "module-1.Interface.InterfaceA.md",
  "module-1.Interface.InterfaceB.md",
  "module-1.Namespace.Validation.md",
  "module-1.Validation.Interface.NamespaceInterface.md",
  "module-1.md",
  "module-2.Class.ClassA.md",
  "module-2.Class.ClassB.md",
  "module-2.Interface.InterfaceA.md",
  "module-2.Interface.InterfaceB.md",
  "module-2.md",
]
`;

exports[`GithubWiki should not output single page sidebar 1`] = `
[
  "Home.md",
]
`;

exports[`GithubWiki should output default sidebar 1`] = `
"## API

- [module-1](../wiki/module-1)
- [module-2](../wiki/module-2)
"
`;

exports[`GithubWiki should output globals sidebar 1`] = `
"## API

### Classes

- [ClassA](../wiki/Class.ClassA)
- [ClassB](../wiki/Class.ClassB)

### Interfaces

- [InterfaceA](../wiki/Interface.InterfaceA)
- [InterfaceB](../wiki/Interface.InterfaceB)
"
`;

exports[`GithubWiki should output index docs 1`] = `
"# typedoc-github-wiki-theme

## Modules

- [module-1](../wiki/module-1)
- [module-2](../wiki/module-2)
"
`;

exports[`GithubWiki should output member docs 1`] = `
"[typedoc-github-wiki-theme](../wiki/Home) / [module-1](../wiki/module-1) / ClassA

# Class: ClassA

## Constructors

### Constructor

> **new ClassA**(): \`ClassA\`

#### Returns

\`ClassA\`
"
`;

exports[`GithubWiki should output single modules sidebar 1`] = `
"## API

- [module-1](../wiki/module-1)
- [module-2](../wiki/module-2)
"
`;
